# r3dtest

./: .env  Cargo.toml  assets.md  client.ron  config.ron  gameplay.md  lol.ron  physic.ron  renderdoc_settings.cap  server.ron
asset_preprocessing/: .gitignore  Cargo.toml
asset_preprocessing/src/: main.rs
asset_preprocessing/src/gltf/: mod.rs
assets/map/: test
assets/prefab/: base_arena.ron  pistol.ron  player.ron  shotgun.ron
assets/shaders/: ambient_light_fs.glsl  billboard_fs.glsl  billboard_vs.glsl  copy-fs.glsl  copy-vs.glsl  debug_fs.glsl  debug_vs.glsl  deferred_fs.glsl  deferred_vs.glsl  directional_light_fs.glsl  fs.glsl  normal_fs.glsl  particle_fs.glsl  particle_vs.glsl  point_light_fs.glsl  scene_vs.glsl  skybox_fs.glsl  sprite_2_vs.glsl  vs.glsl
assets/sprites/: crosshair.ron  pistol.ron  pistol.xcf  shotgun.ron  soldier.ron  soldier.xcf
assets/world/: arena.ron  bonjour.ron  empty.ron  lol.ron  lol2.ron
config/: client.ron  physic.ron  render.ron  server.ron  ui.ron
shaders/: axis_fs.glsl  axis_vs.glsl  sprite_vs.glsl  text_vs.glsl
src/: animation.rs  camera.rs  colors.rs  event.rs  geom.rs  input.rs  lib.rs  main.rs  resources.rs  utils.rs
src/assets/: material.rs  mesh.rs  mod.rs  prefab.rs
src/collections/: mod.rs  option_array.rs  ring_buffer.rs  shared_deque.rs
src/controller/: client.rs  fps.rs  free.rs  mod.rs
src/ecs/: mod.rs  serialization.rs
src/editor/: components.rs  material_editor.rs  mesh_editor.rs  mod.rs  tab.rs
src/gameplay/: delete.rs  gun.rs  health.rs  mod.rs  pickup.rs  player.rs  ui.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs  snapshot.rs
src/physics/: body.rs  bounding_box.rs  collision.rs  mod.rs  physic2.rs
src/render/: assets.rs  billboard.rs  debug.rs  lighting.rs  mod.rs  particle.rs  shaders.rs  skybox.rs  sprite.rs  text.rs
(+20 files in other folders)
